--- a/openaps.ini
+++ b/openaps.ini
@@ -1,6 +1,8 @@
 [device "pump522"]
 serial = 445293
 vendor = openaps.vendors.medtronic
+expires = 2015-07-19T15:49:40.930990
+model = 522
 
 [device "dex"]
 vendor = openaps.vendors.dexcom
