openaps-report add pumpTime.json JSON pump522 read_clock
      TODO: better change descriptions
      /usr/local/bin/openaps-report add pumpTime.json JSON pump522 read_clock

--- a/openaps.ini
+++ b/openaps.ini
@@ -7,3 +7,8 @@ expires = 2015-07-19T22:19:44.711703
 [device "dex"]
 vendor = openaps.vendors.dexcom
 
+[report "pumpTime.json"]
+device = pump522
+use = read_clock
+reporter = JSON
+
