openaps-report add tempbasal.json JSON pump522 read_temp_basal
      TODO: better change descriptions
      /usr/local/bin/openaps-report add tempbasal.json JSON pump522 read_temp_basal

--- a/openaps.ini
+++ b/openaps.ini
@@ -12,3 +12,8 @@ device = pump522
 use = read_clock
 reporter = JSON
 
+[report "tempbasal.json"]
+device = pump522
+use = read_temp_basal
+reporter = JSON
+
