openaps-use pump522 status
      TODO: better change descriptions
      /usr/local/bin/openaps-use pump522 status

--- a/openaps.ini
+++ b/openaps.ini
@@ -2,7 +2,7 @@
 serial = 445293
 vendor = openaps.vendors.medtronic
 model = 522
-
+expires = 2015-07-28T12:49:33.867814
 
 [device "dex"]
 vendor = openaps.vendors.dexcom
