openaps-report add glucose.json.new JSON dex glucose
      TODO: better change descriptions
      /usr/local/bin/openaps-report add glucose.json.new JSON dex glucose

--- a/openaps.ini
+++ b/openaps.ini
@@ -20,3 +20,8 @@ reporter = JSON
 [alias]
 testalias = use pump522 scan
 
+[report "glucose.json.new"]
+device = dex
+use = glucose
+reporter = JSON
+
