openaps-alias add status report invoke status.json.new
      TODO: better change descriptions
      /usr/local/bin/openaps-alias add status report invoke status.json.new

--- a/openaps.ini
+++ b/openaps.ini
@@ -18,7 +18,7 @@ use = read_temp_basal
 reporter = JSON
 
 [alias]
-status = use pump522 status
+status = report invoke status.json.new
 
 [report "glucose.json.new"]
 device = dex
