openaps-alias add pumpTime report invoke pumpTime.json
      TODO: better change descriptions
      /usr/local/bin/openaps-alias add pumpTime report invoke pumpTime.json

--- a/openaps.ini
+++ b/openaps.ini
@@ -19,6 +19,7 @@ reporter = JSON
 
 [alias]
 status = report invoke status.json.new
+pumptime = report invoke pumpTime.json
 
 [report "glucose.json.new"]
 device = dex
