--- a/openaps.ini
+++ b/openaps.ini
@@ -31,3 +31,8 @@ device = pump522
 use = status
 reporter = JSON
 
+[report "clock.json.new"]
+device = pump522
+use = read_clock
+reporter = JSON
+
