openaps-alias add pumptime report invoke clock.json.new
      TODO: better change descriptions
      /usr/local/bin/openaps-alias add pumptime report invoke clock.json.new

--- a/openaps.ini
+++ b/openaps.ini
@@ -19,7 +19,7 @@ reporter = JSON
 
 [alias]
 status = report invoke status.json.new
-pumptime = report invoke pumpTime.json
+pumptime = report invoke clock.json.new
 
 [report "glucose.json.new"]
 device = dex
