openaps-report add currenttemp.json.new JSON pump522 read_temp_basal
      TODO: better change descriptions
      /usr/local/bin/openaps-report add currenttemp.json.new JSON pump522 read_temp_basal

--- a/openaps.ini
+++ b/openaps.ini
@@ -36,3 +36,8 @@ device = pump522
 use = read_clock
 reporter = JSON
 
+[report "currenttemp.json.new"]
+device = pump522
+use = read_temp_basal
+reporter = JSON
+
