--- a/openaps.ini
+++ b/openaps.ini
@@ -41,3 +41,8 @@ device = pump522
 use = read_temp_basal
 reporter = JSON
 
+[report "pumphistory.json.new"]
+device = pump522
+use = read_current_history_pages
+reporter = JSON
+
