--- a/openaps.ini
+++ b/openaps.ini
@@ -46,3 +46,8 @@ device = pump522
 use = read_current_history_pages
 reporter = JSON
 
+[report "pump_settings.json"]
+device = pump522
+use = settings
+reporter = JSON
+
