openaps-report add bg_targets.json JSON pump522 read_bg_targets
      TODO: better change descriptions
      /usr/local/bin/openaps-report add bg_targets.json JSON pump522 read_bg_targets

--- a/openaps.ini
+++ b/openaps.ini
@@ -51,3 +51,8 @@ device = pump522
 use = settings
 reporter = JSON
 
+[report "bg_targets.json"]
+device = pump522
+use = read_bg_targets
+reporter = JSON
+
