openaps-report add isf.json JSON pump522 read_insulin_sensitivies
      TODO: better change descriptions
      /usr/local/bin/openaps-report add isf.json JSON pump522 read_insulin_sensitivies

--- a/openaps.ini
+++ b/openaps.ini
@@ -56,3 +56,8 @@ device = pump522
 use = read_bg_targets
 reporter = JSON
 
+[report "isf.json"]
+device = pump522
+use = read_insulin_sensitivies
+reporter = JSON
+
