--- a/openaps.ini
+++ b/openaps.ini
@@ -61,3 +61,8 @@ device = pump522
 use = read_insulin_sensitivies
 reporter = JSON
 
+[report "current_basal_profile.json"]
+device = pump522
+use = read_selected_basal_profile
+reporter = JSON
+
