openaps-report add carb_ratio.json JSON pump522 read_carb_ratios
      TODO: better change descriptions
      /usr/local/bin/openaps-report add carb_ratio.json JSON pump522 read_carb_ratios

--- a/openaps.ini
+++ b/openaps.ini
@@ -66,3 +66,8 @@ device = pump522
 use = read_selected_basal_profile
 reporter = JSON
 
+[report "carb_ratio.json"]
+device = pump522
+use = read_carb_ratios
+reporter = JSON
+
