--- a/openaps.ini
+++ b/openaps.ini
@@ -71,3 +71,9 @@ device = pump522
 use = read_carb_ratios
 reporter = JSON
 
+[report "pump_history.json"]
+device = pump522
+count = 100
+use = iter_pump
+reporter = JSON
+
