openaps-report add pumpsettings.json.new JSON pump522 read_settings
      TODO: better change descriptions
      /usr/local/bin/openaps-report add pumpsettings.json.new JSON pump522 read_settings

--- a/openaps.ini
+++ b/openaps.ini
@@ -77,3 +77,8 @@ count = 100
 use = iter_pump
 reporter = JSON
 
+[report "pumpsettings.json.new"]
+device = pump522
+use = read_settings
+reporter = JSON
+
