openaps-alias add pumpsettings report invoke pumpsettings.json.new
      TODO: better change descriptions
      /usr/local/bin/openaps-alias add pumpsettings report invoke pumpsettings.json.new

--- a/openaps.ini
+++ b/openaps.ini
@@ -20,6 +20,7 @@ reporter = JSON
 [alias]
 status = report invoke status.json.new
 pumptime = report invoke clock.json.new
+pumpsettings = report invoke pumpsettings.json.new
 
 [report "glucose.json.new"]
 device = dex
