openaps-report add bg_targets.json.new JSON pump522 read_bg_targets
      TODO: better change descriptions
      /usr/local/bin/openaps-report add bg_targets.json.new JSON pump522 read_bg_targets

--- a/openaps.ini
+++ b/openaps.ini
@@ -83,3 +83,8 @@ device = pump522
 use = read_settings
 reporter = JSON
 
+[report "bg_targets.json.new"]
+device = pump522
+use = read_bg_targets
+reporter = JSON
+
