openaps-report add isf.json.new JSON pump522 read_insulin_sensitivies
      TODO: better change descriptions
      /usr/local/bin/openaps-report add isf.json.new JSON pump522 read_insulin_sensitivies

--- a/openaps.ini
+++ b/openaps.ini
@@ -88,3 +88,8 @@ device = pump522
 use = read_bg_targets
 reporter = JSON
 
+[report "isf.json.new"]
+device = pump522
+use = read_insulin_sensitivies
+reporter = JSON
+
