--- a/openaps.ini
+++ b/openaps.ini
@@ -93,3 +93,8 @@ device = pump522
 use = read_insulin_sensitivies
 reporter = JSON
 
+[report "current_basal_profile.json.new"]
+device = pump522
+use = read_selected_basal_profile
+reporter = JSON
+
