--- a/openaps.ini
+++ b/openaps.ini
@@ -98,3 +98,8 @@ device = pump522
 use = read_selected_basal_profile
 reporter = JSON
 
+[report "carb_ratio.json.new"]
+device = pump522
+use = read_carb_ratios
+reporter = JSON
+
