openaps-alias add enact use pump522 set_temp_basal requestedtemp.json
      TODO: better change descriptions
      /usr/local/bin/openaps-alias add enact use pump522 set_temp_basal requestedtemp.json

--- a/openaps.ini
+++ b/openaps.ini
@@ -21,6 +21,7 @@ reporter = JSON
 status = report invoke status.json.new
 pumptime = report invoke clock.json.new
 pumpsettings = report invoke pumpsettings.json.new
+enact = use pump522 set_temp_basal requestedtemp.json
 
 [report "glucose.json.new"]
 device = dex
