openaps-report add pump_settings.json.new JSON pump522 settings
      TODO: better change descriptions
      /usr/local/bin/openaps-report add pump_settings.json.new JSON pump522 settings

--- a/openaps.ini
+++ b/openaps.ini
@@ -104,3 +104,8 @@ device = pump522
 use = read_carb_ratios
 reporter = JSON
 
+[report "pump_settings.json.new"]
+device = pump522
+use = settings
+reporter = JSON
+
