openaps-report add pump_history.json.new JSON pump522 iter_pump 100
      TODO: better change descriptions
      /usr/local/bin/openaps-report add pump_history.json.new JSON pump522 iter_pump 100

--- a/openaps.ini
+++ b/openaps.ini
@@ -109,3 +109,9 @@ device = pump522
 use = settings
 reporter = JSON
 
+[report "pump_history.json.new"]
+device = pump522
+count = 100
+use = iter_pump
+reporter = JSON
+
