openaps-report invoke status.json.new
      TODO: better change descriptions
      /usr/local/bin/openaps-report invoke status.json.new

--- a/openaps.ini
+++ b/openaps.ini
@@ -2,6 +2,7 @@
 serial = 445293
 vendor = openaps.vendors.medtronic
 model = 522
+expires = 2015-08-06T18:39:19.141376
 
 [device "dex"]
 vendor = openaps.vendors.dexcom
