openaps-report invoke status.json.new
      TODO: better change descriptions
      /usr/local/bin/openaps-report invoke status.json.new

--- a/openaps.ini
+++ b/openaps.ini
@@ -1,8 +1,8 @@
 [device "pump522"]
 serial = 445293
 vendor = openaps.vendors.medtronic
-model = 
-expires = 2015-08-15T17:49:28.972191
+model = 522
+expires = 2015-08-15T17:59:06.040533
 
 [device "dex"]
 vendor = openaps.vendors.dexcom
